# pySigma-validators-sigmaHQ

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml
.github/workflows/: release.yml  schema.yml  test.yml  update_data.yml
json-schema/: schema_sigma.json  schema_sigmahq_filename.json  schema_sigmahq_taxonomy.json  schema_sigmahq_windows_eventid.json  schema_sigmahq_windows_provider.json  schema_sigmahq_windows_validator.json
sigma/validators/sigmahq/: __init__.py  author.py  check_condition.py  check_detection.py  check_field.py  check_filename.py  check_logsource.py  check_metadata.py  check_tags.py  check_title.py  condition.py  config.py  correlation.py  date.py  description.py  detection.py  falsepositive.py  field.py  fieldname.py  fields.py  filename.py  level.py  logsource.py  metadata.py  modifier.py  references.py  sigmahq_data.py  status.py  tags.py  title.py
tests/: test_condition.py  test_config.py  test_correlation.py  test_detection.py  test_field.py  test_filename.py  test_logsource.py  test_metadata.py  test_tags.py  test_title.py  test_validators.py
tests/files/correlation/: correlation_combined_format.yml  correlation_valid_filename.yml
tests/files/json/: sigmahq_filename.json  sigmahq_taxonomy.json  sigmahq_windows_validator.json
tests/files/rule_filename_errors/: Name.yml
tests/files/rule_filename_valid/: proc_creation_win_svchost_accepteula.yml
tests/files/rule_name_product_errors/: rule_for_macos.yml
tests/files/rules-correlations/: correlation_valid_filename.yml  invalid_prefix_name.yml
tests/sigmahq/: test_sigmahq_correlation_filename_prefix_validator.py  test_sigmahq_falsepositives_typo_word_validator.py  test_sigmahq_invalid_all_modifier_validator.py  test_sigmahq_invalid_fieldname_validator.py  test_sigmahq_modified_date_order_validator.py  test_sigmahq_ofselection_condition_validator.py  test_sigmahq_redundant_field_validator,.py  test_sigmahq_sysmon_missing_eventid_validator.py
tests/sigmahq/author/: test_sigmahq_author_existence_validator.py
tests/sigmahq/condition/: test_sigmahq_missing_asterisk_condition_validator.py  test_sigmahq_ofselection_condition_validator.py  test_sigmahq_ofthem_condition_validator.py
tests/sigmahq/correlation/: test_correlation_groupby_existence.py  test_correlation_rules_minimum.py  test_sigmahq_correlation_groupby_existence.py  test_sigmahq_correlation_rules_minimum.py
tools/: sigma.json  sigmahq_filename.json  sigmahq_taxonomy.json  sigmahq_windows_eventid.json  sigmahq_windows_provider.json  sigmahq_windows_validator.json  update_ref.py
validator_jsom/: sigmahq_filepattern.json
validator_json/: sigma.json  sigma_taxonomy.json  sigmahq_filename.json  sigmahq_filepattern.json
(+87 files in other folders)
