[tool.poetry]
name = "pySigma-validators-sigmahq"
version = "0.12.2"
description = "pySigma SigmaHQ validators"
authors = ["François Hubaut <frack113@users.noreply.github.com>"]
license = "LGPL-2.1-only"
readme = "README.md"
repository = "https://github.com/SigmaHQ/pySigma_validators_sigmaHQ"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.9" # EOL but used in the wide
pysigma = "^0.11"
requests = "^2.32"

[tool.poetry.group.dev.dependencies]
black = "^25.0"
defusedxml = "^0.7"
pytest = "^8.0"  # 9.0 need python 3.10
pytest-cov = "^7.0"
mypy = "^1.18"
types-requests = "^2.32.4"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]